<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Escalate</string>
    <string name="hello_blank_fragment" tools:ignore="ExtraTranslation">Hello blank fragment</string>
    <string name="facebook_app_id">2003973829914567</string>
    <string name="fb_login_protocol_scheme">fb508665436234226</string>
    <string name="sign_in">Log In</string>
    <string name="google_api_android_key">AIzaSyB0hKSiL68UclwRPjXuqowWqAwZAoAiwN8</string>
    <string name="username_phone_number">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="or_sign_in_with">or Log In with</string>
    <string name="new_to_fametale">New To FameTale?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password" tools:ignore="ExtraTranslation">Forgot Password?</string>
    <string name="sign_up_simple">Sign Up</string>
    <string name="username">User Name</string>
    <string name="name">Name</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="gender">Gender</string>
    <string name="_91">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="sign_in_underline">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_accept_all_the_termes_and_condition_and_privacy_policies_of_fametale">I accept all the Termes and Condition and Privacy Policies of Fametale.</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="we_have_sent_you_a_verification_code_n_via_sms_for_mobile_number_verification">We have sent you a verification code   via SMS for mobile number verification</string>
    <string name="sent_to">Sent to</string>
    <string name="resend">Resend</string>
    <string name="i_didn_t_receive_a_code">I didn\'t receive a code!</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="send">Reset Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="camera">Camera</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="following">Following</string>
    <string name="comment">Comment</string>
    <string name="writetext">Write a text here...</string>
    <string name="top_video">TOP VIDEOS</string>
    <string name="top_of_week">TOP OF WEEK</string>
    <string name="top_of_month">TOP OF MONTH</string>
    <string name="top_profile">TOP PROFILES</string>
    <string name="tags">Tags</string>
    <string name="categories">CATEGORIES</string>
    <string name="share">Share</string>
    <string name="copy_link">Copy Link</string>
    <string name="user_profile">User Profile</string>
    <string name="about_fametale">About FameTale</string>
    <string name="contact_fametale">Contact FameTale</string>
    <string name="rate_faletale">Rate FameTale</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="logout">Log Out</string>
    <string name="lorem_ipsum_">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever sincns e the 1500s,</string>
    <string name="lorem_ipsum_is_simply">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever sincns e the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versioof Lorem Ipsum. when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, and more recently with desktop publishing software like Aldus PageMaker including versioof Lorem Ipsum and more recently with desktop publishing software like Aldus PageMaker including versioof Lorem Ipsum.</string>
    <string name="new_msg">New Massage</string>
    <string name="chat">Chat</string>
    <string name="johndoe">John Doe</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="followers_262">0 Followers</string>
    <string name="following_375">0 Following</string>
    <string name="rating">Rating</string>
    <string name="no_thanks"><u>No Thanks</u></string>
    <string name="tab_txt">Tab the number of star you\'d give us in a scale from 1-5</string>
    <string name="my_contact">My Contact</string>
    <string name="invite">Invite</string>
    <string name="akash_rastogi">Akash Rastogi</string>
    <string name="termes_and_condition">Terms and Conditions</string>
    <string name="privacy"><u>Privacy</u></string>
    <string name="policies"><u>Policies</u></string>
    <string name="privacy_policies"><u>Privacy Policies</u></string>
    <string name="error_empty_username">Enter Your Username</string>
    <string name="error_valid_username">Don\'t enter special character</string>
    <string name="error_empty_password">Enter Your Password</string>
    <string name="error_valid_password">Password must contain 7 or more characters and a combination of letters and numbers</string>
    <string name="error_empty_name">Enter name</string>
    <string name="error_empty_date">Enter date</string>
    <string name="error_empty_no">Enter phone number</string>
    <string name="error_valid_no">Enter valid phone number</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="enter_valid_username">Enter valid username</string>
    <string name="label_cancel" translatable="false">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="label_select_video">Select Video</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="title_description">A library with UI and mechanisms to trim local videos on Android applications</string>
    <string name="description_app">
            # Provide UI to preview and select start/end of the video to trim
        \n\n# Thumbnails with frame by frame overview of the video
        \n\n# Works with gallery and recorded videos
    </string>
    <string name="pick_a_video">Select or record a a video below to try it out:</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="add_hash_tag">Add hash tag</string>
    <string name="add_categories">Categories</string>
    <string name="categories_1">A</string>
    <string name="post">Post</string>
    <string name="proceed">Proceed</string>
    <string name="error_old_pass">Please enter old password</string>
    <string name="error_query">Please enter Query</string>
    <string name="error_new_password">Please enter new password</string>
    <string name="error_cnf_password">Please enter confirm password</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_i">Description</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="rate">Rate</string>
    <string name="cancel_label">Cancel</string>
    <string name="ok_label">Ok</string>
    <string name="settings_video_quality_title">Video size %s</string>
    <string name="settings_photo_quality_title">Photo size</string>
    <string name="preview_controls_confirm">Save</string>
    <string name="preview_controls_retake">Repeat</string>
    <string name="preview_controls_cancel">Cancel</string>
    <string name="preview_controls_crop">Crop</string>
    <string name="preview_controls_original_ratio_label">Original</string>
    <string name="error_empty_tag">Please enter tag</string>
    <string name="error_empty_description">Please enter description</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email ID</string>
    <string name="password_">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>
    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout_">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="full_name" tools:ignore="ExtraTranslation">Full Name</string>
    <string name="email_">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="enter_digit">Enter 6 digit OTP</string>
    <string name="comedy">Comedy</string>
    <string name="filmy">Filmy</string>
    <string name="songs">Songs</string>
    <string name="dialogues">Dialogues</string>
    <string name="replies">Replies</string>
    <string name="people">People</string>
    <string name="topics">Topics</string>
    <string name="recent">Recent</string>
    <string name="tags_small">Tags</string>
    <string name="denny_j">\@Denny_J</string>
    <string name="followers" tools:ignore="ExtraTranslation">followers</string>
    <string name="apply" tools:ignore="ExtraTranslation">Apply</string>
    <string name="cencel" tools:ignore="ExtraTranslation">Cancel</string>
    <string name="category" tools:ignore="ExtraTranslation">Category</string>
    <string name="description_120_characters" tools:ignore="ExtraTranslation">c</string>
    <string name="add_hashtags" tools:ignore="ExtraTranslation">Add Hashtags</string>
    <string name="johnnathan_clay">Johnnathan Clay</string>
    <string name="john_1234">\@John1234</string>
    <string name="notifications">Notifications</string>
    <string name="the_otp_has_been_sent_to_your_email_address_please_input_the_number_to_proceed">The OTP has been sent to your email address. Please input the number to proceed</string>
    <string name="content_hide">Do you wish the hide all content from this person.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="logo">logo</string>
    <string name="backiv">backIv</string>
    <string name="no_notification">No Notification</string>
    <string name="otp">OTP</string>
    <string name="post_queries">Post Queries</string>
    <string name="submit">Submit</string>
    <string name="write_you_queries_here">write you queries here...</string>
</resources>