<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_20"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_hide"
        android:gravity="center"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/txt_black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/dp_26">
        <Button
            android:id="@+id/yesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:layout_margin="@dimen/dp_6"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/noTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_6"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>