<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PostQueriesAct"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:ignore="MissingDefaultResource">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:background="@color/app_color">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/iViewBackQuery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_toEndOf="@+id/iViewBackQuery"
                    android:background="@drawable/forgot_pswrd_back"
                    tools:ignore="NotSibling"
                    android:contentDescription="@string/backiv"/>
                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/post_queries"
                    android:textSize="@dimen/sp_20"
                    android:fontFamily="@font/segoeui_0"
                    android:textStyle="normal"
                    style="@style/MyTextView"
                    android:textColor="@color/white"
                    android:layout_marginEnd="@dimen/dp_30"
                    />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/edtPostQuery"
        style="@style/MyEditText"
        android:layout_below="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/edittext_mic_background"
        android:cursorVisible="true"
        android:hint="@string/write_you_queries_here"
        android:gravity="start"
        android:textSize="@dimen/sp_16"
        android:imeOptions="actionDone"
        android:maxLength="120"
        android:paddingBottom="@dimen/dp_15"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_15"
        android:visibility="visible"
        android:layout_margin="@dimen/_30sdp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear"
        android:layout_above="@id/btnProceed">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_100"
            android:contentDescription="@string/logo"
            android:background="@drawable/change_pswrd_logo"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textStyle="normal"
        android:background="@drawable/save_rectangle_back"
        android:text="@string/submit"
        android:fontFamily="@font/seguisb_0"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>

</layout>